--- a/legacy.tex
+++ b/legacy.tex
@@ -72,7 +72,8 @@ Here we point out how large and previously unreported batch effects in the early
 
 Different mutagenic processes may preferentially affect different DNA motifs. 
 Certain mutagens in tobacco smoke, for example, have been shown to preferentially bind to certain genomic motifs leading to an excess of G to T transversions \citep{Pfeifer2002,Pleasance2010}. 
-Thus, exposure of populations to different mutational processes can be inferred by considering the DNA context of polymorphism in search of \textit{signatures} of different mutational processes \citep{Alexandrov2013,Shiraishi2015a}. 
+Thus, the impact of mutational processes can be inferred by considering the DNA context of a polymorphism \citep{Alexandrov2013,Shiraishi2015a}. 
+%Thus, exposure of populations to different mutational processes can be inferred by considering the DNA context of polymorphism in search of \textit{signatures} of different mutational processes \citep{Alexandrov2013,Shiraishi2015a}. 
 Such genome-wide mutational signatures have been used as diagnostic tools for cancers \citep{Alexandrov2013,Shiraishi2015a}.
 
 %This means that the genomic context of a mutation can be used to gain insight into the cause of this mutation \cite{Pleasance2010}.
